[Extensions] Only show the dev mode bubble once per original profile

We record profiles we show the dev mode bubble for in order to avoid
showing it multiple times for the same profile. However, we need to
ensure we track the original profile, so that we don't show it for
an original profile and an incognito profile.

Fix this, and add a unittest.

Bug: 819309
Change-Id: Ibe33ea6f5587e85463a5a77023387e07b8fdf3ff
Reviewed-on: https://chromium-review.googlesource.com/951971
Commit-Queue: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541266}
Former-commit-id: 493cc87e378a341c2f1231e9323a81f46613ac83